# API-for-working-with-DB

src/: alembic.ini  main.py  pyproject.toml
src/api/: crud.py  router.py
src/core/: exceptions.py
src/db/: session.py
src/db/migrations/: env.py
src/db/migrations/versions/: c3b847c28297_create_users_table.py
src/db/models/: __init__.py  base.py  users.py
src/db/repository/: base.py  user.py
src/schemas/: user.py
src/services/: user.py
